start the prolog process using ProcessBuilder instead of Runtime